[tool.poetry]
name = "netgarage"
version = "0.1.0"
description = ""
authors = ["Simon D. Schmidt <simschmidt@deloitte.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
